<resources>
    <string name="app_name">Appsokstore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="ic_home">Beranda</string>
    <string name="ic_favorite">Favorit</string>
    <string name="ic_profile">Profil</string>
    <string name="ic_warta">Warta</string>

</resources>